[package]
name = "jsptemplate"
version = "0.1.0"
authors = ["jgerber"]
edition = "2018"

[dependencies]
nom = "5.0.0-beta2"
failure = "0.1.5"
structopt = "0.2.16"
colored = "1.8.0"
log = "0.4.6"
fern = { version = "0.5.8", features = ["colored"] }
chrono = "0.4.6"
ext_regex = {package = "regex", version = "1.1.7"}

[dependencies.jsp]
git = "https://github.com/jlgerber/jobsyspolice.git"
#tag = "v0.34.0"
branch = "regex_new"
#path = "../jobsyspolice"